Stacked Full Window Mode #43008

Closed
opened 2014-12-24 21:40:43 +01:00 by Aaron Carlisle · 35 comments
Member

System Information

Windows 8.0 Intel HD 4600

Blender Version

Broken: Blender 2.73RC
Worked: (Unknown)

Short description of error

When you have two or more full window modes you can not return to previous

Exact steps for others to reproduce the error

  1. Open Blender
  2. Turn the Properties panel to full window mode
  3. Make sure the render displace is set to image editor
  4. Hit render
  5. Try to go back to previous which is the full window of the properties panel
**System Information** Windows 8.0 Intel HD 4600 **Blender Version** Broken: Blender 2.73RC Worked: (Unknown) **Short description of error** When you have two or more full window modes you can not return to previous **Exact steps for others to reproduce the error** 1. Open Blender 2. Turn the Properties panel to full window mode 3. Make sure the render displace is set to image editor 4. Hit render 5. Try to go back to previous which is the full window of the properties panel
Author
Member

Changed status to: 'Open'

Changed status to: 'Open'
Author
Member

Added subscriber: @Blendify

Added subscriber: @Blendify
Author
Member

This is related to #42754

This is related to #42754

Closed as duplicate of #42754

Closed as duplicate of #42754

Added subscriber: @Sergey

Added subscriber: @Sergey

Indeed it is. Merged.

Indeed it is. Merged.
Author
Member

Changed status from 'Duplicate' to: 'Open'

Changed status from 'Duplicate' to: 'Open'
Author
Member

This is not fixed

This is not fixed
Member

Added subscriber: @JulianEisel

Added subscriber: @JulianEisel
Member

Have you tried with a buildbot build? The fix isn't included in 2.73a

Have you tried with a buildbot build? The fix isn't included in 2.73a
Author
Member

Yes latest build bot at least when I reopened this Hash 6b655ca

Yes latest build bot at least when I reopened this Hash 6b655ca
Author
Member

My comment from After they were set as duplicates #42754

These are two differant bugs the first one is specific to the file browser the other is from a full window on a full window mode
My comment from After they were set as duplicates #42754 ``` These are two differant bugs the first one is specific to the file browser the other is from a full window on a full window mode ```
Julian Eisel self-assigned this 2015-01-24 16:30:46 +01:00
Member

Indeed, that's something different

Indeed, that's something different
Author
Member

The cause can be two things

  1. Blender does not respect stacked full windows modes
  2. Blender does respect and when you hit ESC key it does a repeated action
The cause can be two things 1. Blender does not respect stacked full windows modes 2. Blender does respect and when you hit ESC key it does a repeated action

This issue was referenced by f7e844570f

This issue was referenced by f7e844570fea862322b235d31a781f32d4cf04d9
Member

Changed status from 'Open' to: 'Resolved'

Changed status from 'Open' to: 'Resolved'
Member

Closed by commit f7e844570f.

Closed by commit f7e844570f.
Author
Member

Changed status from 'Resolved' to: 'Open'

Changed status from 'Resolved' to: 'Open'
Author
Member

Tested with latest build it does not work everywhere e.g.

make the properties full window
add texture but when you are in the file browser go back the the properties

Tested with latest build it does not work everywhere e.g. make the properties full window add texture but when you are in the file browser go back the the properties
Author
Member

And many other areas in blender

And many other areas in blender
Member

Works fine here. What is the exact build hash?

Works fine here. What is the exact build hash?
Author
Member

oops sorry 2855485

oops sorry 2855485
Member

What are the exact steps you're using to test this?

What are the exact steps you're using to test this?
Author
Member

dont mind the hole video tried the feature for the first time :/

0001-0250.avi

dont mind the hole video tried the feature for the first time :/ [0001-0250.avi](https://archive.blender.org/developer/F139379/0001-0250.avi)
Member

I made it so that canceling via escape or by pressing the "Cancel" button brings you back to the original fullscreen (try it, I bet it works). But maybe the "Back to Previous" button should behave like this as well....

I made it so that canceling via escape or by pressing the "Cancel" button brings you back to the original fullscreen (try it, I bet it works). But maybe the "Back to Previous" button should behave like this as well....
Author
Member

Alright that works but for 2.74 you should document this is a form other then the bug section

Alright that works but for 2.74 you should document this is a form other then the bug section

Added subscriber: @ideasman42

Added subscriber: @ideasman42

The bug (as reported) is fixed, could you update the report? - this is too hard to follow at the moment.

The bug (as reported) is fixed, could you update the report? - this is too hard to follow at the moment.
Author
Member

I dont think there is any confusion but more for the discussion of weather how "Back to Previous" should work in these situations.

I dont think there is any confusion but more for the discussion of weather how "Back to Previous" should work in these situations.
Member

@ideasman42, the only issue that's still remaining is that "Back to Previous" closes both a temporary fullscreen and a user set fullscreen. E.g. using shift+spacebar to toggle into fullscreen + opening File Browser/render into Image Editor, "Back to Previous" should really bring you back to previous, in this case the fullscreen set with shift+spacebar. The fix I committed does this, but only for ESC key/Cancel button in file browser. Will have a look into the other thing as well.

@ideasman42, the only issue that's still remaining is that "Back to Previous" closes both a temporary fullscreen and a user set fullscreen. E.g. using shift+spacebar to toggle into fullscreen + opening File Browser/render into Image Editor, "Back to Previous" should really bring you back to previous, in this case the fullscreen set with shift+spacebar. The fix I committed does this, but only for ESC key/Cancel button in file browser. Will have a look into the other thing as well.

Changed status from 'Open' to: 'Resolved'

Changed status from 'Open' to: 'Resolved'

Bug reports are not for discussion - if blender is broken it should be clear what fails.
Please always keep reports clear, If they are fixed but you don't think some other area is working as you expect, then open a separate report.

Bug reports are not for discussion - if blender is broken it should be clear what fails. Please always keep reports clear, If they are fixed but you don't think some other area is working as you expect, then open a separate report.
Member

@ideasman42, agree, just left it open because I was worried we'd forget about it if it's just closed as todo, which would mean we had a only half working solution implemented. (I'm on it though)

@ideasman42, agree, just left it open because I was worried we'd forget about it if it's just closed as todo, which would mean we had a only half working solution implemented. (I'm on it though)
Member

Update: Committed 3e59092348 some days ago. Everything should work like a charm now :)

Update: Committed 3e590923485dd0 some days ago. Everything should work like a charm now :)
Author
Member

Cool

Cool
Sign in to join this conversation.
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset Browser
Interest
Asset Browser Project Overview
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Collada
Interest
Compatibility
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
EEVEE
Interest
EEVEE & Viewport
Interest
Freestyle
Interest
Geometry Nodes
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest
Import Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overlay
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline, Assets & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Virtual Reality
Interest
Vulkan
Interest
Wayland
Interest
Workbench
Interest: X11
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Core
Module
Development Management
Module
EEVEE & Viewport
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline, Assets & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Priority
High
Priority
Low
Priority
Normal
Priority
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
No project
No Assignees
5 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: blender/blender#43008
No description provided.