Fix T43008: Support stacked fullscreen areas